force-app/main/default/objects/Price_Book__c/Price_Book__c.object-meta.xml
<CustomObject>
    <label>Price Book</label>
    <nameField>
        <displayFormat>PB - {00000}</displayFormat>
        <label>Price Book Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>