force-app/main/default/objects/Price_Book__c/fields/Secondary_Customer_Category__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Customer_Category__c</fullName>
    <label>Secondary Customer Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TN_Elite Club</fullName>
            </value>
            <value>
                <fullName>TN_GT</fullName>
            </value>
            <value>
                <fullName>KN_BMA</fullName>
            </value>
            <value>
                <fullName>KN_GT</fullName>
            </value>
            <value>
                <fullName>KN_Wholesale</fullName>
            </value>
            <value>
                <fullName>West_SMT</fullName>
            </value>
            <value>
                <fullName>West_GT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>