force-app/main/default/objects/Price_Book__c/fields/Secondary_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Customer_Type__c</fullName>
    <label>Secondary Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retailer</fullName>
            </value>
            <value>
                <fullName>Outlet/Horeca</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>