force-app/main/default/objects/Price_Book__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analyst</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Integrator</fullName>
            </value>
            <value>
                <fullName>Investor</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Press</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Category</fullName>
                <isActive>false</isActive>
                <label>Category</label>
            </value>
            <value>
                <fullName>Customer Wise</fullName>
                <isActive>false</isActive>
                <label>Customer Wise</label>
            </value>
            <value>
                <fullName>Region</fullName>
                <isActive>false</isActive>
                <label>Region</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>