force-app/main/default/objects/Price_Book__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <label>UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nos</fullName>
            </value>
            <value>
                <fullName>KGS</fullName>
            </value>
            <value>
                <fullName>LTR</fullName>
            </value>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>MTR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>