force-app/main/default/objects/Price_Book__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Code__c</columns>
    <columns>Customer_Type__c</columns>
    <columns>Customer__c</columns>
    <columns>Secondary_Customer_Category__c</columns>
    <columns>Secondary_Customer_Type__c</columns>
    <columns>Region__c</columns>
    <columns>Product__c</columns>
    <columns>UOM__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>MRP__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>